--- a/MLstats/NAMESPACE
+++ b/MLstats/NAMESPACE
@@ -2,5 +2,8 @@
 
 S3method(model_fit,lm_ann)
 S3method(model_fit,lm_rf)
+export(ANN)
+export(install_tensorflow)
 export(lmML)
 export(model_fit)
+importFrom(tensorflow,install_tensorflow)
