--- a/MLstats/NAMESPACE
+++ b/MLstats/NAMESPACE
@@ -9,4 +9,8 @@ export(ANN_lm)
 export(install_tensorflow)
 export(lmML)
 export(model_fit)
+importFrom(stats,dnorm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,predict)
 importFrom(tensorflow,install_tensorflow)
