--- a/MLstats/NAMESPACE
+++ b/MLstats/NAMESPACE
@@ -12,5 +12,6 @@ export(model_fit)
 importFrom(stats,dnorm)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.response)
 importFrom(stats,predict)
 importFrom(tensorflow,install_tensorflow)
