--- a/MLstats/NAMESPACE
+++ b/MLstats/NAMESPACE
@@ -9,6 +9,7 @@ export(ANN_lm)
 export(install_tensorflow)
 export(lmML)
 export(model_fit)
+export(predict.MLstats)
 importFrom(stats,dnorm)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
